--- a/_config.yml
+++ b/_config.yml
@@ -125,8 +125,8 @@ inc_before_toc :
 inc_after_toc : 
 inc_before_content : 
 inc_after_content : 
-inc_before_footer : 
-inc_after_footer : "footer.html"
+inc_before_footer : "footer.html"
+inc_after_footer : 
 inc_before_head : 
 inc_after_head : 
 inc_before_meta : 
