--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: The coolest wiki ever
 # (boolean) disable edit functionalities (edit/delete/add pages)
 disable_edit: false
 # (boolean) Enable/disable wiki page list in sidebar
-show_wiki_pages: false
+show_wiki_pages: true
 # (integer) Maximum number of wiki page to shown in sidebar
 show_wiki_pages_limit: 5
 # (boolean) Enable/disable blog feature
