--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ inc_after_content :
 inc_before_footer : "footer.html"
 inc_after_footer : 
 inc_before_head : 
-inc_after_head : 
+inc_after_head : "head.html"
 inc_before_meta : 
 inc_after_meta : 
 inc_before_scripts : 
